# Uintah

./: build_crusher.sh  build_crusher_cmake.sh  build_crusher_cmake_expt.sh  build_crusher_dpcpp.sh  build_sunspot_cmake.sh
src/CCA/Components/: CMakeLists.txt
src/CCA/Components/Application/: ApplicationCommon.cc  CMakeLists.txt  CMakeLists.txt~
src/CCA/Components/Arches/: BoundaryCondition.cc  CMakeLists.txt  CQMOM.cc  CQMOM.h  CompDynamicProcedure.cc  ConvectionHelper.h  DQMOM.cc  DQMOM.h  Discretization.cc  Discretization.h  EfficiencyCalculator.h  ExplicitSolver.cc  ExplicitTimeInt.cc  IntrusionBC.cc  KokkosSolver.cc  MomentumSolver.cc  PressureSolverV2.cc  Properties.cc  ScaleSimilarityModel.cc  SmagorinskyModel.cc  TurbulenceModel.cc  TurbulenceModelPlaceholder.cc  WBCHelper.cc  linSolver.cc  sub.mk
src/CCA/Components/Arches/Attic/: CompLocalDynamicProcedure.cc  EnthalpySolver.cc  IncDynamicProcedure.cc  OdtClosure.cc  PicardNonlinearSolver.cc  PressureSolver.cc  ScalarSolver.cc
src/CCA/Components/Arches/ChemMix/: ClassicTableInterface.cc  ColdFlow.cc  ConstantProps.cc
src/CCA/Components/Arches/ChemMixV2/: ClassicTable.h
src/CCA/Components/Arches/CoalModels/: BadHawkDevol.cc  BirthDeath.cc  CharOxidationShaddix.cc  CharOxidationSmith.cc  CharOxidationSmithConstLv0.cc  Deposition.cc  DragModel.cc  EnthalpyShaddix.cc  FOWYDevol.cc  KobayashiSarofimDevol.cc  LinearSwelling.cc  MaximumTemperature.cc  PartVel.cc  RichardsFletcherDevol.cc  ShaddixHeatTransfer.cc  ShrinkageRate.cc  SimpleHeatTransfer.cc  Thermophoresis.cc  YamamotoDevol.cc
src/CCA/Components/Arches/ParticleModels/: CQMOMSourceWrapper.cc  CharOxidationps.h  Constant.h  DQMOMNoInversion.cc  FaceParticleVel.h  WDragModel.h
src/CCA/Components/Arches/PropertyModels/: AlgebraicScalarDiss.cc  EmpSoot.cc  ExtentRxn.cc  HeatLoss.cc  (+5 more)
src/CCA/Components/DataArchiver/: CMakeLists.txt~  DataArchiver.cc
src/CCA/Components/Examples/: AMRHeat.cpp  AMRWave.cc  Benchmark.cc  Burger.cc  CMakeLists.txt  DOSweep.cc  Heat.cpp  ParticleTest1.cc  Poisson1.cc  Poisson2.cc  Poisson3.cc  Poisson4.cc  RMCRT_Test.cc  RegridderTest.cc  SolverTest1.cc  SolverTest2.cc  UnifiedSchedulerTest.cc  UnifiedSchedulerTest.h  UnifiedSchedulerTestKernel.cu  Wave.cc
src/CCA/Components/FVM/: ElectrostaticSolve.cc  GaussSolve.cc
src/CCA/Components/ICE/: AMRICE.cc  ICE.cc  ICE.h  impAMRICE.cc  impICE.cc
src/CCA/Components/LoadBalancers/: CMakeLists.txt~  LoadBalancerCommon.cc
src/CCA/Components/MPM/: AMRMPM.cc  ImpMPM.cc  MPMCommon.cc  RigidMPM.cc  RigidMPM.h  SerialMPM.cc  SerialMPM.h  SingleFieldMPM.cc  SingleHydroMPM.cc
src/CCA/Components/MPMFVM/: ESConductivityModel.cc  ESMPM.cc  ESMPM2.cc
src/CCA/Components/MPMICE/: MPMICE.cc  MPMICE2.cc  MPMICE2.h  sub.mk
src/CCA/Components/Models/: CMakeLists.txt
src/CCA/Components/OnTheFlyAnalysis/: 1stLawThermo.cc  AnalysisModule.cc  CMakeLists.txt  MinMax.cc  controlVolFluxes.cc  flatPlate_heatFlux.cc  lineExtract.cc  meanTurbFluxes.cc  momentumAnalysis.cc  particleExtract.cc  planeAverage.cc  planeExtract.cc  spatialAvg.cc  statistics.cc  turbulentFluxes.cc  vorticity.cc
src/CCA/Components/Parent/: ApplicationFactory.cc  CMakeLists.txt  Switcher.cc
src/CCA/Components/PostProcessUda/: CMakeLists.txt  CMakeLists.txt~  PostProcessUda.cc  spatioTemporalAvg.cc  statistics.cc
src/CCA/Components/ProblemSpecification/: ProblemSpecReader.cc
src/CCA/Components/RMM/: aligned.hpp  coalescing_free_list.hpp  device_memory_resource.hpp  free_list.hpp  gpu_memory_resource.hpp  host_memory_resource.hpp  new_delete_resource.hpp  per_device_resource.hpp  pinned_memory_resource.hpp  pool_memory_resource.hpp  stream_ordered_memory_resource.hpp
src/CCA/Components/Regridder/: RegridderCommon.cc
src/CCA/Components/Schedulers/: CMakeLists.txt  CMakeLists.txt~  DWDatabase.h  DetailedTask.cc  DetailedTask.h  DetailedTasks.cc  DetailedTasks.h  DynamicMPIScheduler.cc  GPUDataWarehouse.cc  GPUDataWarehouse.cc~  GPUDataWarehouse.cpp  GPUDataWarehouse.cu  GPUDataWarehouse.h  GPUGridVariableGhosts.cc  GPUGridVariableGhosts.h  GPUGridVariableInfo.cc  GPUGridVariableInfo.cpp  GPUGridVariableInfo.cpp~  GPUGridVariableInfo.h  GPUMemoryPool.cc  GPUMemoryPool.h  GPUMemoryPool.hpp  GPUStreamPool.h  KokkosOpenMPScheduler.cc  KokkosScheduler.cc  KokkosScheduler.h  MPIScheduler.cc  OnDemandDataWarehouse.cc  OnDemandDataWarehouse.h  Relocate.cc  RuntimeStats.cpp  SYCLScheduler.cc  SYCLScheduler.hpp  SchedulerCommon.cc  SchedulerCommon.h  SchedulerFactory.cc  TaskGraph.cc  TaskGraph.h  UnifiedDataWarehouse.h  UnifiedScheduler.cc  (+4 more)
src/CCA/Components/SimulationController/: AMRSimulationController.cc  SimulationController.cc
src/CCA/Components/Solvers/: CGSolver.cc  HypreSolver.cc
src/CCA/Components/SwitchingCriteria/: DDT1.cc  SimpleBurn.cc  SteadyBurn.cc  SteadyState.cc  TimestepNumber.cc
src/CCA/Components/Wasatch/: FieldAdaptor.h  OldVariable.cc  ParticlesHelper.cc  SetProcID.cc  TaskInterface.cc  TimeStepper.cc  Wasatch.cc
src/Core/: CMakeLists.txt  CMakeLists.txt~
src/Core/Geometry/: GPUVector.h  IntVector.h  Point.h  Tensor.h  Vector.h
src/Core/GeometryPiece/: FileGeometryPiece.cc  GeometryPieceFactory.cc
src/Core/Grid/: CMakeLists.txt  DbgOutput.cc  Task.cc  Task.h
src/Core/Grid/BoundaryConditions/: UnionBCData.cc  UnionBCData.h
src/Core/Grid/Variables/: Array3.h  Array3Data.h  Array3Window.h  BlockRange.hpp  GPUGridVariable.h  GPUGridVariableBase.h  GPUParticleVariable.h  GPUParticleVariableBase.h  GPUPerPatch.h  GPUPerPatchBase.h  GPUReductionVariable.h  GPUReductionVariableBase.h  GPUStencil7.h  GPUVariable.h  ListOfCellsIterator.h  LoopExecution.hpp  LoopExecution.hpp~  constVariable.h
src/Core/Lockfree/: Lockfree_Mappers.hpp
src/Core/Malloc/: new.cc
src/Core/Math/: Int130.h  Matrix3.h  Short27.h  sci_lapack.cc
src/Core/Parallel/: CMakeLists.txt  CMakeLists.txt~  CommunicationList.hpp  CrowdMonitor.hpp  ExecutionObject.h  KokkosTools.h  LoopExecution.hpp  MasterLock.h  Parallel.cc  Parallel.h  SpaceTypes.h  TaskDeclaration.h  UintahParams.h  icpx
src/Core/Util/: GPU.h  sub.mk
(+318 files in other folders)
