if (BUILD_ARCHES)
  add_subdirectory(Arches)
endif (BUILD_ARCHES)

if (BUILD_EXAMPLES)
  add_subdirectory(Examples)
endif (BUILD_EXAMPLES)

if (BUILD_FVM)
  add_subdirectory(FVM)
endif (BUILD_FVM)

if (BUILD_HEAT)
  add_subdirectory(Heat)
endif (BUILD_HEAT)

if (BUILD_ICE)
  add_subdirectory(ICE)
endif (BUILD_ICE)

if (BUILD_MPM)
  add_subdirectory(MPM)
endif (BUILD_MPM)

if (BUILD_MPM AND BUILD_FVM)
  add_subdirectory(MPMFVM)
endif ()

if (BUILD_MPM AND BUILD_ICE)
  add_subdirectory(MPMICE)
endif ()

if (BUILD_PHASEFIELD)
  add_subdirectory(PhaseField)
endif (BUILD_PHASEFIELD)

if (BUILD_WASTACH)
  add_subdirectory(Wasatch)
endif (BUILD_WASTACH)

if (BUILD_MINIMAL)
  add_subdirectory(DataArchiver)
  add_subdirectory(LoadBalancers)
  add_subdirectory(ProblemSpecification)
  add_subdirectory(Schedulers)
else()
  add_subdirectory(Application)
  add_subdirectory(DataArchiver)
  add_subdirectory(LoadBalancers)
  add_subdirectory(Models)
  add_subdirectory(OnTheFlyAnalysis)
  add_subdirectory(Parent)
  add_subdirectory(PostProcessUda)
  add_subdirectory(ProblemSpecification)
  add_subdirectory(Regridder)
  add_subdirectory(Schedulers)
  add_subdirectory(SimulationController)
  add_subdirectory(Solvers)
  add_subdirectory(SwitchingCriteria)
endif (BUILD_MINIMAL)
